# story-of-renderer

./: .envrc  .gitignore  README.md  hello.py  pyproject.toml  story.py
src/: main.py
src/story_of_renderer/: __init__.py  __main__.py
